--- a/.github/workflows/scrape-books.yml
+++ b/.github/workflows/scrape-books.yml
@@ -42,11 +42,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
       - name: 📦 Install Dependencies
         run: |
-          pip install selenium beautifulsoup4
+          pip install -r requirements.txt
           # Install Chrome and ChromeDriver
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
